--- a/style-mobile.css
+++ b/style-mobile.css
@@ -12,7 +12,7 @@
         max-height: 690px;
         overflow: hidden;
         padding-bottom: env(safe-area-inset-bottom);
-        min-height: 590px;
+        min-height: 98%;
     }
 
     .maze-area {
