--- a/style-512.css
+++ b/style-512.css
@@ -1,9 +1,5 @@
 @media (max-width: 512px) {
-    .fas,
-    .far,
-    .fab {
-        display: none;
-    }
+  
 
     /* Логотипы оставляем видимыми */
     .logo-container .fas,
@@ -14,24 +10,33 @@
 
     /* Основная структура */
     .app-container {
-        grid-template-columns: 120px 1fr;
+        grid-template-columns: 110px 1fr;
         grid-template-rows: 1fr auto;
         grid-template-areas:
             "sidebar main"
             "footer footer";
-        min-height: 590px;
-        max-height: 690px;
+       
+        max-height: 90%;
     }
 
+       .progress-track {
+        flex: 1;
+        width: 98%;
+        border-radius: 14px;
+        background: var(--brand-red-dark);
+        box-shadow:
+            0 8px 0 rgba(122, 15, 22, 1),
+            0 14px 26px rgba(0,0,0,0.35);
+    }
     /* Боковая панель */
     .sidebar-logo {
         grid-area: sidebar;
         padding: 7px 1px;
         background: #2c1810;
         display: flex;
-        width: 120px;
-        min-width: 120px;
-        max-width: 120px;
+        width: 110px;
+        min-width: 110px;
+        max-width: 110px;
         height: 100%;
         flex-direction: column;
         align-items: flex-start;
@@ -109,23 +114,7 @@
         align-items: start;
     }
 
-    /* Заголовки главной страницы */
-    .home-header {
-        margin-bottom: 20px;
-        padding: 0 10px;
-    }
 
-    .home-title {
-        font-size: 20px;
-        margin-bottom: 8px;
-        line-height: 1.3;
-    }
-
-    .home-subtitle {
-        font-size: 12px;
-        max-width: 300px;
-        line-height: 1.4;
-    }
 
     /* Сетки */
     .home-grid,
@@ -133,10 +122,10 @@
     .shops-grid {
         grid-template-columns: repeat(2, 1fr);
         gap: 8px;
-        max-width: 100%;
+        max-width: 97%;
         height: auto;
         margin-bottom: 20px;
-        align-items: start;
+        align-items: center;
     }
 
     .home-grid {
