Add min-height to CSS grid layout

--- a/style-512.css
+++ b/style-512.css
@@ -15,6 +15,7 @@
         grid-template-areas:
             "sidebar main"
             "footer footer";
+       min-height: 88%;
        
         max-height: 90%;
     }
