--- a/style-512.css
+++ b/style-512.css
@@ -1,5 +1,11 @@
 @media (max-width: 512px) {
-  
+    * {
+        
+        
+        margin-bottom: 15px;
+        
+    }
+
 
     /* Логотипы оставляем видимыми */
     .logo-container .fas,
@@ -10,14 +16,13 @@
 
     /* Основная структура */
     .app-container {
-        grid-template-columns: 110px 1fr;
+        grid-template-columns: 105px 1fr;
         grid-template-rows: 1fr auto;
         grid-template-areas:
             "sidebar main"
             "footer footer";
-       min-height: 78%;
-       
-        max-height: 80%;
+       height: calc(100dvh - 264px);
+        max-height: 90%;
     }
 
        .progress-track {
@@ -35,9 +40,9 @@
         padding: 7px 1px;
         background: #2c1810;
         display: flex;
-        width: 110px;
-        min-width: 110px;
-        max-width: 110px;
+        width: 105px;
+        min-width: 105px;
+        max-width: 105px;
         height: 100%;
         flex-direction: column;
         align-items: flex-start;
@@ -113,6 +118,7 @@
         display: flex;
         flex-direction: column;
         align-items: start;
+        margin-top: 5px;
     }
 
 
