--- a/style-mobile.css
+++ b/style-mobile.css
@@ -8,12 +8,12 @@
     }
 
     .app-container {
-        height: calc(100dvh - 60px);
+        height: calc(100dvh - 263px);
         max-height: 690px;
         overflow: hidden;
         padding-bottom: env(safe-area-inset-bottom);
-        min-height: 88%;
-         max-height: 98%;
+        min-height: 90%;
+        max-height: 98%;
     }
 
     .maze-area {
@@ -21,6 +21,8 @@
         grid-template-columns: repeat(2, 1fr);
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
+        margin-top: 5px;
+
     }
 
     .selection-card {
