--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     /* В style.css обновляем */
     .app-container {
         display: grid;
-        grid-template-columns: 250px 1fr 345px;
+        grid-template-columns: 250px 1fr 400px;
         grid-template-rows: 1fr auto; /* Единый подход для всех */
         gap: 0;
         position: relative;
@@ -108,7 +108,14 @@
     .shops-grid.active {
         display: grid ; /* Показывается при активации */
     }
-    .maze-area{ padding: 35px;}
+    .maze-area{ 
+        padding: 35px; 
+        align-items: center;
+        align-items: center; /* ← Центрировать ВСЕХ детей */
+    
+    }
+
+
     .home-card,
     .option-card,
     .shop-card-grid,
@@ -149,6 +156,7 @@
         text-align: center;
         margin-bottom: 40px;
         padding-bottom: 25px;
+        position: 20px;
         border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     }
 
@@ -164,7 +172,7 @@
     }
 
     .logo-subtitle {
-        font-size: 12px;
+        font-size: 18px;
         color: rgba(255,255,255,0.8);
         text-transform: uppercase;
         letter-spacing: 1px;
@@ -322,6 +330,7 @@
     /* ===== ГЛАВНАЯ СТРАНИЦА ===== */
     .home-content.active {
         display: block ;
+        align-items: center;
     }
 
     /* ===== ГЛАВНАЯ СТРАНИЦА ===== */
@@ -331,7 +340,7 @@
         grid-template-rows: 150px 150px 150px; /* Все 3 строки по 150px */
         gap: 20px;
         max-width: 800px;
-        margin: 0 auto 40px;
+        margin: 60px auto 40px;
         width: 100%;
         box-sizing: border-box;
     }
@@ -374,20 +383,15 @@
         margin-bottom: 15px;
         color: #ffffff;
     }
-
-    .home-header {
-        text-align: center;
-        margin-bottom: 20px;
-        padding: 0 20px;
-        
-    }
+ 
 
     .home-title {
-        font-size: 36px;
+        font-size: 32px;
         color: #e8d0b3;
         margin-bottom: 10px;
         font-weight: 700;
         line-height: 1.2;
+        align-items: center;
     }
 
     /* -----------------------------------------------------------------------
@@ -499,7 +503,7 @@
     }
 
     #panelTitle {
-        font-size: 22px;
+        font-size: 20px;
         color: #ffffff;
         margin-bottom: 8px;
         display: flex;
@@ -571,6 +575,9 @@
 
             /* общая рассеянная */
             10px 14px 30px rgba(0,0,0,0.35);
+        max-width: 100%;
+        flex-wrap: nowrap;
+        overflow: hidden;
     }
 
     /* -----------------------------------------------------------------------
