--- a/style-553.css
+++ b/style-553.css
@@ -1,8 +1,8 @@
-    @media (max-width: 574px) {}
+    @media (max-width: 574px)
+{
        /* Сетки */
     .home-grid,
-    .house-grid,
-     {
+    .house-grid   {   
         grid-template-columns: repeat(2, 1fr);
         gap: 3px;
         max-width: 98%;
