--- a/style-800.css
+++ b/style-800.css
@@ -1,4 +1,5 @@
-@media (max-width: 800px) {
+@media (max-width: 800px) 
+{
     html, body {
         width: 100vw;
         max-width: 100vw;
@@ -105,11 +106,7 @@
         right: 0 !important;
         top: 0 !important;
         bottom: 0 !important;
-        grid-area: main;
-        padding: 15px;
-        width: 100%;
-        height: 100%;
-        overflow-y: auto;
+      
 
         flex-direction: column;
         align-items: flex-start;
@@ -118,11 +115,10 @@
       
         display: flex;
         flex-direction: column;
-        
-        
+                
     }
        
-    }
+    
     
      .home-grid {
         grid-template-columns: repeat(2, 1fr);
