--- a/style.css
+++ b/style.css
@@ -99,23 +99,7 @@
     /* -----------------------------------------------------------------------
     1. БАЗОВЫЙ ПРОСТРАНСТВЕННЫЙ ОБЪЁМ (ВСЕ КЛЮЧЕВЫЕ БЛОКИ)
     ------------------------------------------------------------------------ */
-
-    .shops-grid {
-        display: none; /* Скрыт по умолчанию */
-        /* остальные стили */
-    }
-
-    .shops-grid.active {
-        display: grid ; /* Показывается при активации */
-    }
-    .maze-area{ 
-        padding: 35px; 
-        align-items: center;
-        align-items: center; /* ← Центрировать ВСЕХ детей */
-    
-    }
-
-
+    .maze-area{ padding: 35px; align-items: center;}
     .home-card,
     .option-card,
     .shop-card-grid,
