--- a/style-512.css
+++ b/style-512.css
@@ -1,13 +1,5 @@
 @media (max-width: 512px) {
-    * {
-        
-        
-        margin-bottom: 15px;
-        
-    }
-
-
-    /* Логотипы оставляем видимыми */
+     /* Логотипы оставляем видимыми */
     .logo-container .fas,
     .logo-container .far,
     .logo-container .fab {
@@ -415,7 +407,7 @@
         font-size: 18px;
     }
 
-    .btn-close-mobile-info {
+   .btn-close-mobile-info {
         position: absolute;
         top: 0;
         right: 0;
@@ -430,6 +422,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 0 !important; /* Важно: убрать все отступы */
+        padding: 0;
+        z-index: 1001;
     }
 
     .mobile-parameter-details {
